@@ -1,4 +1,4 @@
-.TH SG_DD "8" "March 2009" "sg3_utils\-1.27" SG3_UTILS
+.TH SG_DD "8" "May 2010" "sg3_utils\-1.29" SG3_UTILS
 .SH NAME
 sg_dd \- copies data to and from files and devices. Specialised for
 devices that understand the SCSI command set.
@@ -283,6 +283,10 @@ commands. This only has an effect with sg devices or block devices
 that have the 'sgio' flag set. The 6 byte variants of the SCSI READ and
 WRITE commands do not support the FUA bit.
 .TP
+nocache
+use posix_fadvise() to advise corresponding file there is no need to fill
+the file buffer with recently read or written blocks.
+.TP
 null
 has no affect, just a placeholder.
 .TP
@@ -457,7 +461,7 @@ Written by Doug Gilbert and Peter Allworth.
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 2000\-2009 Douglas Gilbert
+Copyright \(co 2000\-2010 Douglas Gilbert
 .br
 This software is distributed under the GPL version 2. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
