@@ -2,12 +2,13 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.30 [20100430] [svn: r342]
+Changelog for sg3_utils-1.30 [20100601] [svn: r344]
   - sg_inq: update version descriptor list to spc4r24
   - sg_lib: sync asc/ascq list to spc4r24
     - dStrHex(): trim excess trailing spaces
   - sg_read_long: add --readonly option (open() is rw)
   - sg_raw: add --readonly option (open() is rw)
+  - sg_vpd: rdac vendor page [0xc8] parse corrections
 
 Changelog for sg3_utils-1.29 [20100406] [svn: r334]
   - sg_rtpg: new logical block dependent state and bit (spc4r23)
